# Geometry

./: .gitignore  conanfile.py  install_with_profile.bat
cmake/: CMakeLists.txt
include/: BoundingBox.h  Camera.h  ConvexHull.h  CoordinateSystem.h  CoordinateTransform.h  GeometricTypes.h  GeometryOperations.h  GeometrySkills.h  GeometryUtils.h  ImageCoordinateSystem.h  ImageTransform.h  Line.h  Plane.h  Rotation.h  ScanLine.h  WorldCoordinateSystem.h  fitProjectiveTransform.h  qvm_cuda.h  qvm_eigen.h  qvm_osg.h
src/: BoundingBox.cpp  ScanLine.cpp
test/: CMakeLists.txt
test/common/: commonTypes.h
test/test_convexHull/: conanfile.py
test/test_convexHull/cmake/: CMakeLists.txt
test/test_convexHull/src/: main.cpp
test/test_convex_hull/cmake/: CMakeLists.txt
test/test_coordinateTransform/: conanfile.py
test/test_coordinateTransform/cmake/: CMakeLists.txt
test/test_coordinateTransform/src/: main.cpp
test/test_coordinate_transform/cmake/: CMakeLists.txt
test/test_operations/: conanfile.py
test/test_operations/cmake/: CMakeLists.txt
test/test_operations/src/: main.cpp
test/test_projectiveTransform/: conanfile.py
test/test_projectiveTransform/cmake/: CMakeLists.txt
test/test_projective_transform/cmake/: CMakeLists.txt
test/test_projective_transform/src/: main.cpp
