CMAKE_MINIMUM_REQUIRED( VERSION 3.10 )

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET( BUILD_EXAMPLE_COORDINATE_TRANSFORM OFF CACHE BOOL "-" )
SET( BUILD_EXAMPLE_PROJECTIVE_TRANSFORM OFF CACHE BOOL "-" )
SET( BUILD_EXAMPLE_CONVEX_HULL OFF CACHE BOOL "-" )
SET( BUILD_EXAMPLE_OPERATIONS OFF CACHE BOOL "-" )

PROJECT( Geometry )

FUNCTION( STRING_FROM_BOOL VAR_STRING VAR_BOOL )
	IF( ${VAR_BOOL} )
		SET( ${VAR_STRING} "True" PARENT_SCOPE )
	ELSE( ${VAR_BOOL} )
		SET( ${VAR_STRING} "False" PARENT_SCOPE )
	ENDIF( ${VAR_BOOL} )
ENDFUNCTION( STRING_FROM_BOOL)

STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_COORDINATE_TRANSFORM" "BUILD_EXAMPLE_COORDINATE_TRANSFORM" )
STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_PROJECTIVE_TRANSFORM" "BUILD_EXAMPLE_PROJECTIVE_TRANSFORM" )
STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_CONVEX_HULL" "BUILD_EXAMPLE_CONVEX_HULL" )
STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_OPERATIONS" "BUILD_EXAMPLE_OPERATIONS" )

INCLUDE(conan.cmake)
conan_cmake_run(
	CONANFILE ../conanfile.py
	BASIC_SETUP CMAKE_TARGETS
	GENERATORS cmake_multi
	OPTIONS Geometry:build_test_convex_hull=${STR_BUILD_EXAMPLE_CONVEX_HULL}
			Geometry:build_test_coordinate_transform=${STR_BUILD_EXAMPLE_COORDINATE_TRANSFORM}
			Geometry:build_test_operations=${STR_BUILD_EXAMPLE_OPERATIONS}
			Geometry:build_test_projective_transform=${STR_BUILD_EXAMPLE_PROJECTIVE_TRANSFORM}
	BUILD missing)

INCLUDE_DIRECTORIES(
	../include
)

SET( INCLUDE_FILES_QVM
	../include/qvm_cuda.h
	../include/qvm_eigen.h
	../include/qvm_osg.h
)

SET( INCLUDE_FILES
	${INCLUDE_FILES_QVM}
	../include/BoundingBox.h
	../include/Camera.h
	../include/ConvexHull.h
	../include/CoordinateTransform.h
	../include/CoordinateSystem.h
	../include/GeometricTypes.h
	../include/GeometrySkills.h
	../include/GeometryUtils.h
	../include/GeometryOperations.h
	../include/ImageTransform.h
	../include/Rotation.h
	../include/ScanLine.h
	../include/WorldCoordinateSystem.h
	../include/ImageCoordinateSystem.h
	../include/Line.h
	../include/Plane.h
	../include/fitProjectiveTransform.h
)

SET( SOURCE_FILES
	../src/BoundingBox.cpp
	../src/ScanLine.cpp
)

ADD_LIBRARY( ${PROJECT_NAME} STATIC
	${INCLUDE_FILES}
	${SOURCE_FILES}
)

TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
	CONAN_PKG::NamedType
	CONAN_PKG::eigen
	CONAN_PKG::boost_qvm
)

SOURCE_GROUP( "Header Files\\QVM" FILES ${INCLUDE_FILES_QVM} )

SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY FOLDER "Algorithms")

IF( BUILD_EXAMPLE_COORDINATE_TRANSFORM OR BUILD_EXAMPLE_PROJECTIVE_TRANSFORM OR BUILD_EXAMPLE_CONVEX_HULL OR BUILD_EXAMPLE_OPERATIONS )
	ADD_SUBDIRECTORY( ../test ${CMAKE_CURRENT_BINARY_DIR}/test )
ENDIF()

