CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT( Geometry_Tests )

SET( BUILD_EXAMPLE_COORDINATE_TRANSFORM OFF CACHE BOOL "-" )
SET( BUILD_EXAMPLE_POJECTIVE_TRANSFORM OFF CACHE BOOL "-" )
SET( BUILD_EXAMPLE_CONVEX_HULL OFF CACHE BOOL "-" )
SET( BUILD_EXAMPLE_OPERATIONS OFF CACHE BOOL "-" )

ADD_CUSTOM_TARGET( Geometry_Test_Common SOURCES
	common/commonTypes.h
)

SET_PROPERTY( TARGET Geometry_Test_Common PROPERTY FOLDER "Tests")

IF( BUILD_EXAMPLE_COORDINATE_TRANSFORM )
	ADD_SUBDIRECTORY( test_coordinateTransform/cmake ${CMAKE_CURRENT_BINARY_DIR}/test_coordinateTransform)
ENDIF( )

IF( BUILD_EXAMPLE_POJECTIVE_TRANSFORM )
	ADD_SUBDIRECTORY( test_projectiveTransform/cmake ${CMAKE_CURRENT_BINARY_DIR}/test_projectiveTransform)
ENDIF( )

IF( BUILD_EXAMPLE_CONVEX_HULL )
	ADD_SUBDIRECTORY( test_convexHull/cmake ${CMAKE_CURRENT_BINARY_DIR}/test_convexHull)
ENDIF( )

IF( BUILD_EXAMPLE_OPERATIONS )
	ADD_SUBDIRECTORY( test_operations/cmake ${CMAKE_CURRENT_BINARY_DIR}/test_operations)
ENDIF( )