CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT( Geometry_Test_ProjectiveTransform)

ADD_DEFINITIONS(-D_SILENCE_CXX17_ADAPTOR_TYPEDEFS_DEPRECATION_WARNING)

INCLUDE_DIRECTORIES(
	../../../include
	../../common
)

ADD_EXECUTABLE( ${PROJECT_NAME}
	../src/main.cpp
)

TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
	Geometry
	CONAN_PKG::NamedType
	CONAN_PKG::eigen
	CONAN_PKG::boost_qvm
)

CONAN_TARGET_LINK_LIBRARIES(${PROJECT_NAME})

SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY FOLDER "Tests")

SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17 )
SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON )